2022-11-19T16:25:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3504262401 # 243
* notice: last 14d: unq all: 1 11
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 93 252
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 94 253
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-19]

2022-11-19T01:43:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3501505046 # 241
* notice: last 14d: unq all: 1 10
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 93 251
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 93 252
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-18]

2022-11-18T08:23:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3495310989 # 239
* notice: last 14d: unq all: 1 9
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 92 250
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 93 251
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-18]

2022-11-17T16:27:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3490098940 # 237
* notice: last 14d: unq all: 1 8
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 92 249
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 92 250
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-17]

2022-11-17T08:26:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3486564888 # 236