@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-19T16:25:18Z",
+  "timestamp" : "2022-11-20T08:22:54Z",
   "count_outdated" : 242,
   "uniques_outdated" : 87,
-  "count" : 253,
-  "uniques" : 94,
+  "count" : 254,
+  "uniques" : 95,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-11-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
