@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 1,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2022-11-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
