@@ -1,3 +1,11 @@
+2022-11-20T08:22:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3507153428 # 245
+* notice: last 14d: unq all: 1 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 94 253
+* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 95 254
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-20]
+
 2022-11-19T16:25:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3504262401 # 243
 * notice: last 14d: unq all: 1 11
